--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             line-height: 1.7;
             color: #333;
             background-color: #f4f7f6; /* Fallback */
-            background-image: url('assets/background.png'); /* Your PNG background */
+            background-image: url('assets/background.gif'); /* Your GIF background */
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
